0030440: Visualization - Graphic3d_Camera::Frustum() returns wrong planes in portrait mode

Graphic3d_Camera::Frustum() now handles window Aspect Ratio < 1.0.